--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pinterest</title>
+  <link rel="icon" type="image/png" href="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
